talk-durham: more minor tweaks, suggestions in comments-durham0913.txt

--- a/talk/talk-durham0913.tex
+++ b/talk/talk-durham0913.tex
@@ -488,9 +488,9 @@ on the degree of prior-data conflict in most cases.}\\[1.5ex]
                           \then\ $P(\text{win}) = [1/100,\, 7/100]$}
 \end{block}
 }
-\uncover<3->{%
-\centerline{shorter intervals \thenthen\ more precise probability statements}
-}
+%\uncover<3->{%
+%\centerline{shorter intervals \thenthen\ more precise probability statements}
+%}
 }
 
 \subsection{Sets of Priors}
