--- a/talk/talk-durham0913.tex
+++ b/talk/talk-durham0913.tex
@@ -508,11 +508,11 @@ All inferences are based on the posterior%\\
 \uncover<2->{%
 \begin{block}{Generalised Bayesian inference procedure}
 \centerline{set of priors + likelihood\hspace*{1ex} \then\ \ set of posteriors}
-All inferences are based on the set of posteriors\\
 \emph{Coherence} (consistency of inferences) ensured by using\\
 \emph{Generalised Bayes' Rule} (GBR, Walley 1991)\\
 = element-wise application of Bayes' Rule\\ %\emph{\small (set of priors must be convex)}\\
 %(e.g., point estimate = $\big[\El[\psib\mid\nng,\ynr],\Eu[\psib\mid\nng,\ynr]\big]$)
+All inferences are based on the set of posteriors
 \end{block}}
 
 \uncover<3->{\centerline{Let hyperparameters $(\nzg, \yzr)$ vary in a set $\PZc$ \then\ \alert{set of priors}}}
@@ -686,6 +686,34 @@ data $s/n = 16/16 = 1$
 }
 
 
+\subsection{Model Discussion}
+
+\frame{\frametitle{Model Discussion}
+\begin{itemize}%[<+->]
+\item<1-> Easy to handle, generally favourable inference properties, e.g.:\\
+$n \to \infty$\hspace*{0.9ex}%
+%\uncover<2->{\then\ \ $\ynr$ values in $\PNc \to \frac{\tau(\x)}{n}$\hspace*{0.9ex}}%
+%\uncover<3->{\then\ \ `Bayesian consistency'}
+\uncover<2->{\then\ \ $\ynr$ stretch in $\PNc \to 0$\hspace*{0.9ex}}%
+\uncover<3->{\then\ \ precise inferences}
+\item<4-> Set shape is crucial modeling choice:\\ %A range of $\nzg$ values is needed for \pdc\ reaction
+trade-off between model complexity and model behaviour
+% \begin{itemize}
+ \item<5-> $\PZc\! = \nzg \times [\yzlr, \yzur]$ {\small (Walley\,1996;\,Quaghebeur\,\&\,de\,Cooman\,2005)}:\\
+ $\PNc\! = \nng \times [\ynlr, \ynur]$ \then\ optimise over $[\ynlr, \ynur]$ only,\\
+ but no \pdc\ sensitivity
+ \item<6-> $\PZc\! = [\nzlg,\nzug] \times [\yzlr, \yzur]$ {\small (Walley 1991; Walter \& Augustin 2009)}:\\
+ $\PNc$ have non-trivial forms (banana / spotlight), but \pdc\ sensitivity and closed form for $\min / \max \ynr$ over $\PNc$\\
+ implementation: \textbf{R} package \texttt{luck}
+% \end{itemize}
+\item<7-> Other set shapes are possible, but may be more difficult to handle %elicit
+%\item<8-> Prior information may be such that range of $\yzr$ changes with $\nzg$ (or vice versa)
+\end{itemize}
+%\alert{generalised iLUCK-models}
+
+}
+
+\iffalse
 \subsection{Parameter Set Shapes}
 
 \frame{\frametitle{Parameter Set Shapes}
@@ -746,8 +774,9 @@ via a different parametrisation of priors suggested by Mi\c{k} Bickis % (in prep
 \end{itemize}
 
 }
+\fi
 
-\frame{\frametitle{Parameter Set Shapes: Outlook}
+\frame{\frametitle{Parameter Set Shape for Strong Prior-Data Agreement}
 
 %\hspace*{-2ex}%
 %\uncover<2->{%
@@ -787,6 +816,7 @@ via a different parametrisation of priors suggested by Mi\c{k} Bickis % (in prep
 \end{tikzpicture}
 }
 
+\iffalse
 \frame{\frametitle{Common-Cause Failure Modeling}
 
 
@@ -806,8 +836,8 @@ via a different parametrisation of priors suggested by Mi\c{k} Bickis % (in prep
 (especially important for multi-component failures!)
 \item Simple ways to elicit bounds for hyperparameters\\ by reasoning on hypothetical data
 \end{itemize}
-
 }
+\fi
 
 \subsection{Conclusion}
 
@@ -823,8 +853,9 @@ via a different parametrisation of priors suggested by Mi\c{k} Bickis % (in prep
 \item<2-> Sets of conjugate priors maintain advantages \& mitigate issues %find a sweet spot in between
  \begin{itemize}%[<+->]
  \item Hyperparameter set shape is important %a crucial modeling choice
- \item Reasonable choice: \emph{rectangular} $\PZc = [\nzlg, \nzug] \times [\yzlr, \yzur]$
- \item Bounds for hyperparameters easy to interpret and elicit
+ \item Reasonable choice: \emph{rectangular} $\PZc = [\nzlg, \nzug] \times [\yzlr, \yzur]$\\
+ (Walter \& Augustin 2009: \emph{generalised iLUCK-models}, \texttt{luck})
+ \item Bounds for hyperparameters are easy to interpret and elicit
  \item Additional imprecison in case of \pdc\\
  leads to \alert{cautious inferences if, and only if, caution is needed}
  \item Shape for more precision in case of strong prior-data agreement is in development
@@ -838,7 +869,7 @@ via a different parametrisation of priors suggested by Mi\c{k} Bickis % (in prep
 \frame{\frametitle{References}
 
 \nocite{2006:evans,1996:walley::idm,1991:walley,2005:quaeghebeurcooman-short,
-Walter2009a-short,luck-package,Troffaes2013a,1994:hoyland,2012:benavolizaffalon-short}
+Walter2009a-short,luck-package,Troffaes2013a,1994:hoyland} %,2012:benavolizaffalon-short}
 %1965:good,2011:kelly:atwood,1996:atwood,}
 
 \printbibliography[heading=none]
