diss: some typos and eta0 marked

--- a/alternatives.tex
+++ b/alternatives.tex
@@ -3,7 +3,7 @@
 
 
 In Section~\ref{sec:generalmodel},
-we have discussed a specific wide of models based on parametrically constructed sets of conjugate priors,
+we have discussed a specific type of models based on parametrically constructed sets of conjugate priors,
 described important properties of inferences based on this class in general terms,
 and illustrated the potential of generalised Bayesian inference methods
 for the situations of prior near-ignorance and substantial prior information.
