--- a/appendix2.tex
+++ b/appendix2.tex
@@ -47,13 +47,13 @@ and we will present here a preview on the results for the Beta-Binomial case.
 In this parametrisation, a canonical prior is represented by a coordinate $(\ezz,\eoz)$,%
 \footnote{Again, we denote prior parameters with superscript ${}\uz$, and posterior parameters with superscript ${}\un$.}
 where $\eoz$ replaces the main prior parameter $\yz$,
-while $\ezz$ is just a different name for $\nz$.
+while $\ezz$ is just a different name for $\nz$.***
 The relation of $(\ezz,\eoz)$ to $(\nz, \yz)$ is as follows:
 %\begin{equation}
 \begin{align}
 \label{eq:trafotony}
 %\begin{aligned}
-\nz &= \ezz \,, &
+\nz &= \ezz ***\,, &
 \yz &= \frac{\eoz}{\ezz + 2} + \frac{1}{2}\,.
 %\end{aligned}
 %\end{equation}
