--- a/concluding.tex
+++ b/concluding.tex
@@ -554,7 +554,7 @@ In fact, such a parametrisation has been developed by Mi\c{k}elis Bickis (\cite*
 and he is currently preparing a manuscript elaborating the details of his findings.
 In this parametrisation, a canonical prior is represented by a coordinate $(\ezz,\eoz)$,
 where $\eoz$ replaces the main prior parameter $\yz$,
-while $\ezz$ is just a different name for $\nz$.%
+while $\ezz$ is just a different name for $\nz$.***%
 %there, update step for $\nz$ is the same, and shift for parameter replacing $\yz$ is the same for all. 
 \footnote{This parametrisation is described in more detail in Section~\ref{sec:boatshape},
 along with some first technical results that confirm the desired properties for the novel shape suggested there.}
