diss: more minor typos

--- a/alternatives.tex
+++ b/alternatives.tex
@@ -164,7 +164,7 @@ $\mathcal{M}_{l,u}$ does not contain only these parametric densities (or conjuga
 Instead, $\mathcal{M}_{l,u}$ contains a variety of shapes, where
 (if $l(\vartheta)$ and $u(\vartheta)$ are not proportional)
 the tail behaviour can vary between that of $l(\vartheta)$ and $u(\vartheta)$.%
-\footnote{See, e.g., \cite[\S 3.2]{2011:rinderknecht}, or \cite[\S 4.3]{1991:pericchi}.}
+\footnote{See, e.g., \textcite[\S 3.2]{2011:rinderknecht}, or \textcite[\S 4.3]{1991:pericchi}.}
 
 The density ratio class is thus similar to sets of priors
 discussed in the model framework from Section~\ref{sec:basicsetting} where
