--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -223,11 +223,12 @@ More precisely, \textcite[see Section~\ref{sec:jstp}]{Walter2009a} proposed
 a direct extension of the model framework discussed in Section~\ref{sec:generalmodel}
 by the definition of so-called \emph{LUCK-models},
 which were already used in \textcite{Walter2007a}
-to generalise Bayesian linear regression). %(see a short summary in Section~\ref{sec:isipta07}).
-These utilize the fact that the central properties of the model framework
+to generalise Bayesian linear regression. %(see a short summary in Section~\ref{sec:isipta07}).
+These \emph{LUCK-models} utilize the fact that the central properties of the model framework
 (see Section~\ref{sec:gbicp-properties-criteria} below)
 rely on the specific form of the update step \eqref{eq:canonicalupdate} only.
-Thus, they can be generalised to settings that are not based on i.i.d.\ observations from canonical exponential family distributions,
+Thus, these properties can be generalised to settings
+that are not based on i.i.d.\ observations from canonical exponential family distributions,
 but nevertheless follow the same update step.} %This is elaborated in Section~\ref{sec:jstp} \parencite{Walter2009a} 
 We have used a model of this type in Section~\ref{sec:intervallearningparameter},
 and will discuss and illustrate this approach in more detail in Section~\ref{sec:jstp}.
