defense: common cause, appendix and references

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -148,6 +148,15 @@
     keywords = {disssource},
 }
 
+@article{Troffaes2013a-short,
+    Longauthor = {Matthias C. M. Troffaes and Gero Walter and Dana L. Kelly},
+    Author = {Matthias Troffaes and Gero Walter and Dana Kelly},
+    Title = {A Robust {B}ayesian Approach to Modelling Epistemic Uncertainty in Common-Cause Failure Models},
+    Year = {2013},
+    journal = {Reliability Engineering \& System Safety},
+    doi = {**** RESS-D-13-00006R1}
+}
+
 @incollection{itip-statinf,
     longauthor    = "Thomas Augustin and Gero Walter and Frank P. A. Coolen",
     author    = "Thomas Augustin and Gero Walter and Frank Coolen",
