--- a/talk/defense.tex
+++ b/talk/defense.tex
@@ -279,6 +279,93 @@ Outline of the talk***
 \note<3>[item]{Must include common-cause failures in overall system reliability analysis}
 }
 
+\frame{
+\frametitle{Common-Cause Failure Modelling ***raus?}
+
+\begin{columns}%[T]
+\begin{column}{0.7\textwidth}\centering
+\includegraphics[scale=1.2]{./graph/800px-Three_Mile_Island_nuclear_power_plant.jpg}
+\end{column}
+\begin{column}{0.35\textwidth}\centering
+\includegraphics[scale=0.95]{./graph/Graphic_TMI-2_Core_End-State_Configuration.png}
+\end{column}
+\end{columns}
+\vspace*{1ex}
+\begin{tiny}
+Above: CDC, \url{http://phil.cdc.gov/phil/} ID 1194\\[1ex]
+Right: Wikimedia Commons,\\[-1.8ex]
+\url{http://commons.wikimedia.org/wiki/File:Graphic_TMI-2_Core_End-State_Configuration.png}
+\end{tiny}
+% Notes for the slide
+\note<1>[item]{Lesson learned at another accident: Three Mile Island (1979) where also a meltdown happened (right)}
+\note<1>[item]{Most popular model: \emph{basic parameter model}, we will look at a parameterisation of it called\ldots}
+}
+
+\subsection{Alpha-Factor Model}
+
+\begin{frame}{Alpha-Factor Model: Definition}
+  \begin{block}{Alpha-Factor Model} %\cite{1988:mosleh::common:cause}]
+    Multinomial distribution $\mult(\vec{n}\mid\vec{\alpha})$ for common-cause failures \\
+    in a $k$-component system\vspace*{-2ex}
+    %the number of redundant components in the common-cause component group
+    \begin{align*}
+      p(\vec{n}\mid\vec{\alpha})=\prod_{j=1}^k\alpha_j^{n_j}\\[-5ex]
+    \end{align*}
+    where
+    \begin{itemize}
+    \item \alert{alpha-factor}
+      $\alpha_j\coloneqq$
+      \parbox[t]{0.6\textwidth}{%
+        probability of $j$ of the $k$ components \\
+        failing due to a common cause \\
+        given that failure occurs
+      }
+    \item \alert{failure count}
+      $n_j\coloneqq$ corresponding number of failures observed
+    \item $\vec{n}$ denotes $(n_1,\dots,n_k)$ and $\vec{\alpha}$ denotes $(\alpha_1,\dots,\alpha_k)$
+    \end{itemize}
+  \end{block}
+  (the model actually serves to estimate failure \emph{rates},\\ but the above is all what matters in this talk)
+\end{frame}
+
+\iffalse
+\begin{frame}{Alpha-Factor Model: Inference ***raus??***}
+  \begin{block}{Inference}
+    involves rational functions \\
+    of probabilities $\vec{\alpha}$ of common-cause failures\\
+    and of total failure rate $q_t$ for individual components
+  \end{block}
+  \begin{center}
+    \textbf{this talk: focus on $\vec{\alpha}$ only}
+  \end{center}
+\end{frame}
+\fi
+
+\begin{frame}{Alpha-Factor Model: Parameter Estimation}
+\uncover<1->{%
+  \begin{exampleblock}{The Good News}
+    attractive feature of this model: \\
+    $\vec{\alpha}$ can be estimated directly from data, e.g.\ MLE:
+    \begin{align*}
+      \alpha_j &= \frac{n_j}{n},\quad \text{where $\textstyle\sum_{j=1}^n n_j = n$}
+    \end{align*}
+  \end{exampleblock}}
+\uncover<2->{%
+  \begin{alertblock}{The Bad News}
+    \begin{itemize}
+    \item typically, for $j\ge 2$, the $n_j$ are very low \\
+      with zero being quite common for larger $j$
+    \item zero counts = flat likelihoods \\
+      standard techniques such as MLE can struggle \\
+      to produce sensible inferences for this problem
+    \end{itemize}
+  \end{alertblock}}
+\uncover<3>{%
+  \vspace*{-1ex}
+  \begin{center}
+    \textbf{\then\ need to rely on \alert{epistemic information}}
+  \end{center}}
+\end{frame}
 
 \frame{\frametitle{References}
 
@@ -351,4 +438,9 @@ with mixture parameter $\kappa^*$ instead of $\kappa$.
 \item arbitrary number of components by complete induction
 \end{itemize}
 }
+
+
+%---- Appendix: reset frame number
+\addtocounter{framenumber}{-3} 
+
 \end{document}
